css/styles.css
*,
:after,
:before {
  box-sizing: border-box;
}

body {
  font-weight: 300;
  background: #FFFFFF;
  color: #212121;
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.page-content {
  padding-top: 2em;
}

.container {
  max-width: 50em;
  margin: 0 auto;
}

h1 {
  margin-left: 30px;
  margin-bottom: 20px;
  font-size: 1.5em;
  color: #FFFFFF;
  display: inline-block;
}

.Grid {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  background-color: #616161;
  border: 2px solid #212121;
  border-radius: 5px;
  webkit-box-shadow: 3px 3px 5px 6px #1C2331;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    3px 3px 5px 6px #1C2331;  /* Firefox 3.5 - 3.6 */
  box-shadow:         3px 3px 5px 6px #1C2331;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
  
}

img {
   border: 2px solid #616161; 
   border-radius: 2px;
   margin-left: 18px;
}

.Grid::after {
  content: " ";
  background-color: #616161;
  height: 30px;
}

.mini-grid {
  padding-left: 20px;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  align-items: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.grid-items {
  background-color: #BDBDBD;
  border-bottom: 1.5px solid #212121;
  border-top: 1.5px solid #212121;
}

.header-div {
  /* This will be twice as big as the small item. */
  -webkit-flex: 2 0 0;
  flex: 2 0 0;
}

.header-buttons-div {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  align-items: flex-end;
  -webkit-flex: 1 0 0;
  flex: 1 0 0;
  /* Small item. */
}

.content-header {
  /* This will be twice as big as the small item. */
  -webkit-flex: 1 0 0;
  flex: 1 0 0;
  color: blue;
}

.content-item {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 2 0 0;
  flex: 2 0 0;
  /* Small item. */
  color: #FFFFFF;
  padding-top: 15px;
  padding-bottom: 15px;
}

p {
  font-weight: bold;
  color: #263238;
}

.green-active {
  background-color: #e0f7fa;
  color: black;
}

.black {
  color: #4285F4;
}

button {
  height: 44px;
  border-radius: 2px;
  margin-right: 15px;
  width: 100px;
  
}

#all {
  background-color: #33b5e5; 
  margin-bottom: 5px;
  margin-top: 5px;

}

#online {
  margin-bottom: 5px;
  background-color: #bdbdbd;

}

#offline {
 margin-bottom: 5px;
 background-color:  #bdbdbd;
}

@media only screen and (max-width: 420px) {
  .content-header {
    margin-right: 20px;
  }

  .Grid {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  background-color: #616161;
  border: 2px solid #212121;
  border-radius: 5px;
  webkit-box-shadow: 1px 1px 2px 3px #1C2331;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    1px 1px 2px 3px #1C2331;  /* Firefox 3.5 - 3.6 */
  box-shadow:         1px 1px 2px 3px #1C2331;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
  
}
img {
  display: block;
  margin-top: 20px;
}

}

